# sleap-roots

./: .gitattributes  .gitignore  CNAME  LICENSE  MultiDicotPipeline.ipynb  README.md  codecov.yml  environment.yml  mkdocs.yml  multipledicotpipeline_tests_javiers_data_03252024.ipynb  multipledicotpipeline_tests_v000.ipynb  multipledicotpipeline_tests_v001.ipynb  multipledicotpipeline_tests_v002.ipynb  plant_associations_tests.ipynb  pyproject.toml  setup.cfg  versions.json
.claude/: settings.local.json
.claude/commands/: benchmark-pr.md  changelog.md  cleanup-merged.md  copilot-review.md  coverage.md  debug-test.md  docs-update.md  fix-formatting.md  lint.md  new-feature.md  new-pipeline.md  pr-description.md  pre-merge-check.md  pre-merge.md  prepare-release.md  review-openspec.md  review-pr.md  run-ci-locally.md  tdd.md  test.md  update-changelog.md  validate-env.md
.claude/commands/research/: investigate.md
.claude/scripts/: compare-benchmarks.py
.claude/skills/openspec-review/: SKILL.md
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml
.serena/: project.yml
.serena/memories/: api_docs_formatting_plan.md  execution_ready_plan.md
docs/: README.md  changelog.md  gen_ref_pages.py  index.md
docs/api/: index.md
docs/api/core/: pipelines.md  series.md
docs/api/examples/: common-workflows.md
docs/api/traits/: angles.md  bases.md  convhull.md  ellipse.md  lengths.md  networklength.md  points.md  scanline.md  tips.md
docs/api/utilities/: summary.md
docs/circumnutation/: preliminary_results_2026-05-07.md  roadmap.md  theory.md
docs/cookbook/: batch-optimization.md  custom-traits.md  exporting-results.md  filtering-data.md  index.md
docs/dev/: adding-traits.md  architecture.md  benchmarking.md  code-style.md  contributing.md  creating-pipelines.md  release-process.md  setup.md  testing.md
docs/getting-started/: installation.md  quickstart.md  what-is-sleap.md
docs/guides/: batch-processing.md  custom-pipelines.md  index.md  prediction-viewer.md  trait-reference.md  troubleshooting.md
docs/guides/data-formats/: csv-traits.md  hdf5.md  sleap-files.md
docs/guides/pipelines/: dicot.md  lateral-root.md  multiple-dicot.md  multiple-primary.md  older-monocot.md  primary-root.md  younger-monocot.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-09-adapt-claude-commands.md  2026-04-24-metadata-layer.md
docs/superpowers/specs/: 2026-04-09-adapt-claude-commands-design.md  2026-04-16-multiple-dicot-plate-pipeline-design.md  2026-04-23-timelapse-diff-and-circumnutation-design.md  2026-04-23-timelapse-diff-and-tip-kinematics-design.md  2026-06-05-add-circumnutation-tier2-psi-g-design.md  2026-06-08-add-circumnutation-tier3a-midline-design.md  2026-06-09-add-circumnutation-tier3b-spatial-cwt-design.md  (+3 more)
docs/tutorials/: dicot-pipeline.md  index.md  lateral-root-pipeline.md  multiple-dicot-pipeline.md  multiple-primary-root-pipeline.md  older-monocot-pipeline.md  primary-root-pipeline.md  younger-monocot-pipeline.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/: index.html
latest/changelog/: index.html
latest/cookbook/: index.html
latest/gen_ref_pages/: index.html
latest/guides/: index.html
latest/search/: search_index.json
latest/tutorials/: index.html
notebooks/: DebugPipeline.ipynb  DicotPipeline.ipynb  DicotPipeline_Mermaid_Graph.md  DicotRootAngle.ipynb  LateralRootPipeline.ipynb  LateralRootPipeline_Mermaid_Graph.md  MultipleDicotPipeline.ipynb  MultipleDicotPipeline_Mermaid_Graph.md  MultiplePrimaryRootPipeline.ipynb  OlderMonocotPipeline.ipynb  OlderMonocotPipeline_Mermaid_Graph.md  Pipeline_mermaid_diagrams.ipynb  PrimaryRootPipeline.ipynb  PrimaryRootPipeline_Mermaid_Graph.md  Series.ipynb  TrackedTipPipeline_Mermaid_Graph.md  YoungerMonocotPipeline.ipynb  YoungerMonocotPipeline_Mermaid_Graph.md  convhull_tests.ipynb  examine-bases-tips.ipynb  get_predictions.ipynb  get_predictions_OlderMonocotPipeline.ipynb  get_predictions_YoungerMonocotPipeline.ipynb  primary-root-discontinuous-problem.ipynb
openspec/: project.md
scripts/circumnutation/: capture_midline_canary.py  capture_spatial_coi_factor.py  capture_spatial_cwt_canary.py  capture_temporal_cwt_canary.py
sleap_roots/: __init__.py  angle.py  bases.py  cli.py  convhull.py  ellipse.py  graphpipeline.py  lengths.py  metadata.py  networklength.py  pipelining.py  points.py  scanline.py  series.py  summary.py  tips.py  tracked_tip_pipeline.py  trait_pipeline.py  trait_pipelines.py  traitsgraph.py
sleap_roots/circumnutation/: __init__.py  _constants.py  _geometry.py  _io.py  _noise.py  _types.py  adapters.py  aggregation.py  cli.py  kinematics.py  midline.py  nutation.py  parametric.py  pipeline.py  plotting.py  psi_g.py  qc.py  spatial_cwt.py  synthetic.py  temporal_cwt.py  traveling_wave.py  units.py
sleap_roots/viewer/: __init__.py  cli.py  generator.py  renderer.py  serializer.py
tests/: conftest.py  test_DicotPipeline.py  test_angle.py  test_bases.py  test_circumnutation_adapters.py  test_circumnutation_aggregation.py  test_circumnutation_cli.py  test_circumnutation_foundation.py  test_circumnutation_kinematics.py  test_circumnutation_midline.py  test_circumnutation_nutation.py  test_circumnutation_pipeline.py  test_circumnutation_plotting.py  test_circumnutation_psi_g.py  test_circumnutation_qc.py  test_circumnutation_spatial_cwt.py  test_circumnutation_synthetic.py  test_circumnutation_temporal_cwt.py  test_circumnutation_traveling_wave.py  test_convhull.py  test_ellipse.py  test_graphpipeline.py  test_lengths.py  test_metadata.py  test_multiple_dicot_plate_pipeline.py  test_networklength.py  test_pipelining.py  test_pixel_units.py  test_points.py  test_scanline  test_scanline.py  test_series.py  test_summary.py  test_tips.py  test_tracked_tip_pipeline.py  test_trait_pipelines.py  test_traitsgraph.py  test_viewer.py
tests/benchmarks/: __init__.py  conftest.py  test_pipeline_performance.py
tests/data/: circumnutation_spatial_cwt_calibration.json
tests/fixtures/: data.py
(+388 files in other folders)
