[metadata]
name = sleap-roots
version = attr: sleap_roots.__version__
author = Talmo Pereira
author_email = talmo@salk.edu
maintainer = Talmo Pereira
maintainer_email = talmo@salk.edu
url = https://github.com/talmolab/sleap-roots
description = Analysis tools for SLEAP-based plant root phenotyping.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = sleap, plants, roots
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
    attrs
    matplotlib
    sleap

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    pydocstyle
    toml
    twine
    build

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[pydocstyle]
convention = google
match-dir = 'sleap_roots'